--- a/org/troikalearning/troikalearning/templates/layout.html
+++ b/org/troikalearning/troikalearning/templates/layout.html
@@ -34,17 +34,17 @@ $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
           <a class="brand" href="{{ url_for('troikas') }}">Troika</a>
           <div class="nav-collapse collapse">
             <ul class="nav pull-right">
-              <li><a href="{{ url_for('feedback') }}">Give Feedback</a></li>
+              <li><a href="{{ url_for('feedback') }}">{{ gettext('Give Feedback') }}</a></li>
               {% if not session.logged_in %}
-              <li><a href="{{ url_for('login') }}">Login / Register</a></li>
+              <li><a href="{{ url_for('login') }}">{{ gettext('Login / Register') }}</a></li>
               {% else %}
               <li><a href="{{ url_for('user') }}">{{ session.email }}</a></li>
-              <li><a href="{{ url_for('logout') }}">Logout</a></li>
+              <li><a href="{{ url_for('logout') }}">{{ gettext('Logout') }}</a></li>
               {% endif %}
             </ul>
             <ul class="nav pull-left">
               <li class="hidden-phone">
-              <a href="{{ url_for('about') }}">About</a>
+              <a href="{{ url_for('about') }}">{{ gettext('About') }}</a>
               </li>
               <li><a href="http://www.facebook.com/troikagame" target="_blank">Facebook&raquo;</a></li>
             </ul>
@@ -64,7 +64,7 @@ $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
             <div class="alert alert-success tl-message">
             {% endif %}
               <button type="button" class="close" data-dismiss="alert">&times;</button>
-              {% if category == "error" %}<strong>Error:</strong> {% endif %} {{ message }}
+              {% if category == "error" %}<strong>{{ gettext('Error') }}:</strong> {% endif %} {{ message }}
             </div>
           {% endfor %}
         <!-- Page Content -->
