--- a/org/troikalearning/troikalearning/templates/macros.html
+++ b/org/troikalearning/troikalearning/templates/macros.html
@@ -1,7 +1,7 @@
 {% macro heading(caller) %}
 <div class="tl-heading">
   <img class="tl-logo" src="{{ url_for('static', filename='img/logo.png') }}"></img>
-  <p>Do you know what you could learn from the person next to you?</p>
+  <p>Discover a Topic. Meet People. Learn Stuff.</p>
 </div>
 {% endmacro %}
 
