Moved feedback to the bottom of the page

--- a/org/troikalearning/troikalearning/static/css/tl.css
+++ b/org/troikalearning/troikalearning/static/css/tl.css
@@ -6,8 +6,13 @@ body {
   margin-right: auto;
 }
 .tl-heading,
-.tl-message {
+.tl-message,
+.tl-feedback {
   text-align: center;
+}
+.tl-feedback {
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 .tl-group {
   border: 1px solid #E5E5E5;
