--- a/org/troikalearning/troikalearning/templates/about.html
+++ b/org/troikalearning/troikalearning/templates/about.html
@@ -122,6 +122,8 @@
         <div class="page-header">
           <h3>{{ gettext('Contact us') }}</h3>
         </div>
+        <p><a href="mailto:info@troikalearning.org">{{ gettext('Give instant feedback about Troika') }}</a>.
+        </p>
         <p>{{ gettext('For general questions about Troika, send an email to') }}
           <a href="mailto:info@troikalearning.org">info@troikalearning.org</a>.
         </p>
@@ -134,3 +136,5 @@
 </div>
 
 {% endblock %}
+{% block feedback %}{% endblock %}
+
