--- a/org/troikalearning/troikalearning/static/css/tl.less
+++ b/org/troikalearning/troikalearning/static/css/tl.less
@@ -7,8 +7,13 @@ body {
   margin-right: auto;
 }
 
-.tl-heading, .tl-message{
+.tl-heading, .tl-message, .tl-feedback{
   text-align: center;
+}
+
+.tl-feedback {
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .tl-group{
