Changed gettext to _, more work on localization dropdown

--- a/org/troikalearning/troikalearning/static/css/tl.less
+++ b/org/troikalearning/troikalearning/static/css/tl.less
@@ -16,6 +16,18 @@ body {
   margin-bottom: 1em;
 }
 
+.tl-language{
+  margin-left: 1em;
+}
+
+.tl-language, .tl-language dl {
+  margin-bottom: 0;
+}
+
+.tl-language select {
+  width: 100px;
+}
+
 .tl-group{
   border: 1px solid #E5E5E5;
   border-radius: 4px 4px 4px 4px;
