--- a/org/troikalearning/troikalearning/templates/about.html
+++ b/org/troikalearning/troikalearning/templates/about.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 {% import 'macros.html' as macros %}
 {% block back_button %}
-<a href="{{ url_for('troikas') }}">{{ gettext('Home') }}</a>
+<a href="{{ url_for('troikas') }}">{{ _('Home') }}</a>
 {% endblock %} 
-{% block subheading %} | {{ gettext('About') }} {% endblock %}
+{% block subheading %} | {{ _('About') }} {% endblock %}
 
 {% block body %}
 {% call macros.heading() %} {% endcall %}
@@ -11,123 +11,123 @@
   <div class="row-fluid"> 
     <div class="span4 tl-group">
       <ul class="nav nav-list" data-spy="scroll" data-target=".nav">
-        <li class="nav-header">{{ gettext('Contents') }}</li>
-        <li><a href="#general">{{ gettext('What is Troika?') }}</a></li>
-        <li><a href="#learn">{{ gettext('Ready to start learning? Join a Troika!') }}</a></li>
-        <li><a href="#share">{{ gettext('Ready to start sharing? Set up your own Troika!') }}</a></li>
-        <li><a href="#we">{{ gettext('Who are we?') }}</a></li>
-        <li><a href="#contact">{{ gettext('Contact us') }}</a></li>
+        <li class="nav-header">{{ _('Contents') }}</li>
+        <li><a href="#general">{{ _('What is Troika?') }}</a></li>
+        <li><a href="#learn">{{ _('Ready to start learning? Join a Troika!') }}</a></li>
+        <li><a href="#share">{{ _('Ready to start sharing? Set up your own Troika!') }}</a></li>
+        <li><a href="#we">{{ _('Who are we?') }}</a></li>
+        <li><a href="#contact">{{ _('Contact us') }}</a></li>
       </ul>
     </div>
     <div class="span8">
       <section id="general" class="tl-anchor">
         <div class="page-header">
-          <h3>{{ gettext('What is Troika?') }}</h3>
+          <h3>{{ _('What is Troika?') }}</h3>
         </div>
-        <p>{{ gettext('Do you know what you could learn from the person next to you? What 
+        <p>{{ _('Do you know what you could learn from the person next to you? What 
         would be the funniest way to share this knowledge to you and
         other people? Troika is a tool developed for you to
         make learning together possible with just the right people
         around you. Troika helps you to easily organize a session for 
         learning and passing the knowledge on.') }}</p>
-        <p>{{ gettext('Why do we need Troika for learning together? The biggest 
+        <p>{{ _('Why do we need Troika for learning together? The biggest 
         obstacle in sharing our knowledge or skills is often to take the first step. 
         Troubles in taking the first steps prevent us from learning small 
         things from each other: how to mend a bicycle, how to use a 
         spreadsheet program - how to juggle? Small things that could make 
         life easier and take very little time.') }}</p>
-        <p>{{ gettext('Troika is a method and a tool to answer these questions and 
+        <p>{{ _('Troika is a method and a tool to answer these questions and 
         overcome the simple - but demanding - obstacles in peer-to-peer 
         learning and knowledge creation. Troika offers') }}
-        <ol><li>{{ gettext('a platform where people can arrange a learning session and') }}</li>
-        <li>{{ gettext('a way to communicate this session forward to other people interested in 
-        the topic.') }}</li></ol>{{ gettext('The purpose of Troika is to make these things possible 
+        <ol><li>{{ _('a platform where people can arrange a learning session and') }}</li>
+        <li>{{ _('a way to communicate this session forward to other people interested in 
+        the topic.') }}</li></ol>{{ _('The purpose of Troika is to make these things possible 
         with the minimum level of organization. A \'troika\' means a clique 
         of three. When three people gather together at Troika event, 
         the organized Troika will be considered as a great success!') }}</p>
-        <p>{{ gettext('Troika builds on three simple premises:') }}
+        <p>{{ _('Troika builds on three simple premises:') }}
           <ul>
-              <li>{{ gettext('You will fill a gap between people who know something and 
+              <li>{{ _('You will fill a gap between people who know something and 
                   people who want to learn something.')}}</li>
-              <li>{{ gettext('You will engage a minimum of two (2) people.')}}</li>
-              <li>{{ gettext('You will talk about troika (Spread the word, advertise the
+              <li>{{ _('You will engage a minimum of two (2) people.')}}</li>
+              <li>{{ _('You will talk about troika (Spread the word, advertise the
               Troika event and share the spirit).')}}</li>
           </ul>
         </p>
-        <p><b>{{ gettext('Troika is not limited to any certain subject areas. We all know 
+        <p><b>{{ _('Troika is not limited to any certain subject areas. We all know 
         something worth sharing - think outside the box!')}}</b></p>
       </section>
       <section id="learn" class="tl-anchor">
         <div class="page-header">
-          <h3>{{ gettext('Ready to start learning? Join a Troika!')}}</h3>
+          <h3>{{ _('Ready to start learning? Join a Troika!')}}</h3>
         </div>
         <p>
           <ol>
-            <li><a href="{{ url_for('login') }}" target="_blank">{{ gettext('Register') }}</a> {{ gettext('as a user.') }}</li>
-            <li><a href="{{ url_for('troikas') }}" target="_blank">{{ gettext('Browse') }}</a> 
-                {{ gettext('the list of active troika events
+            <li><a href="{{ url_for('login') }}" target="_blank">{{ _('Register') }}</a> {{ _('as a user.') }}</li>
+            <li><a href="{{ url_for('troikas') }}" target="_blank">{{ _('Browse') }}</a> 
+                {{ _('the list of active troika events
                 on the front page and find the ones you\'re interested in. If there is no troika 
                 available on the topic you wish to learn, you may want to') }} 
                 <a href="{{ url_for('create_troika') }}" target="_blank">
-                {{ gettext('set up your own \'pending troika\'') }}</a> 
-                {{ gettext('and choose "I want someone else to lead this"
+                {{ _('set up your own \'pending troika\'') }}</a> 
+                {{ _('and choose "I want someone else to lead this"
                 to request for someone else to lead the troika.') }}</li>
-            <li>{{ gettext('Sign up for an interesting troika by clicking the appropriate join link 
+            <li>{{ _('Sign up for an interesting troika by clicking the appropriate join link 
                 on the troika description page.') }}</li>
-            <li>{{ gettext('Attend the troika and enjoy the experience of learning!') }}</li>
-            <li>{{ gettext('Gain your badges and review.')}}</li>
-            <li>{{ gettext('Recommend Troika to your friends and acquaintances.') }}</li>
+            <li>{{ _('Attend the troika and enjoy the experience of learning!') }}</li>
+            <li>{{ _('Gain your badges and review.')}}</li>
+            <li>{{ _('Recommend Troika to your friends and acquaintances.') }}</li>
           </ol>
         </p>
       </section>
       <section id="share" class="tl-anchor">
         <div class="page-header">
-          <h3>{{ gettext('Ready to start sharing? Set up your own Troika!') }}</h3>
+          <h3>{{ _('Ready to start sharing? Set up your own Troika!') }}</h3>
         </div>
         <p>
           <ol>
             <li><a href="{{ url_for('login') }}" target="_blank">Register</a> as a user.</li>
-            <li>{{ gettext('Find a topic you wish to teach, share or present, or a topic you want to learn about 
+            <li>{{ _('Find a topic you wish to teach, share or present, or a topic you want to learn about 
 		from someone else.') }}</li>
-            <li><a href="{{ url_for('create_troika') }}" target="_blank">{{ gettext('Create') }}</a> 
-                {{ gettext('a new pending troika!') }}</li>
-            <li>{{ gettext('Wait for the first two to join your troika.') }}</li>
-            <li>{{ gettext('Agree on the time and place and click "Activate troika" to make the troika
+            <li><a href="{{ url_for('create_troika') }}" target="_blank">{{ _('Create') }}</a> 
+                {{ _('a new pending troika!') }}</li>
+            <li>{{ _('Wait for the first two to join your troika.') }}</li>
+            <li>{{ _('Agree on the time and place and click "Activate troika" to make the troika
                 active and publicly available.') }}</li>
-            <li>{{ gettext('Attend the troika and enjoy the experience of learning!') }}</li>
-            <li>{{ gettext('Gain your badges and reviews.') }}</li>
-            <li>{{ gettext('Recommend Troika to your friends and acquaintances.') }}</li>
+            <li>{{ _('Attend the troika and enjoy the experience of learning!') }}</li>
+            <li>{{ _('Gain your badges and reviews.') }}</li>
+            <li>{{ _('Recommend Troika to your friends and acquaintances.') }}</li>
           </ol>
         </p>
       </section>
       <section id="we" class="tl-anchor">
         <div class="page-header">
-          <h3>{{ gettext('Who are we?') }}</h3>
+          <h3>{{ _('Who are we?') }}</h3>
         </div>
-        <p>{{ gettext('Troika is the brain child of Olli Parviainen, Petro Poutanen, 
+        <p>{{ _('Troika is the brain child of Olli Parviainen, Petro Poutanen, 
         Salla Laaksonen and Timo Tiuraniemi who also developed this site.') }}</p>
-        <p>{{ gettext('Troika website is part of the Extended Mind family of software tools. 
+        <p>{{ _('Troika website is part of the Extended Mind family of software tools. 
           Troika and Extended Mind are open source software developed under') }}
           <a href="http://www.gnu.org/licenses/agpl-3.0.html" target="_blank">
-          {{ gettext('Affero GNU Public Licence v3') }}</a>.
-          {{ gettext('Get the source code') }} <a href="https://github.com/ttiurani/extendedmind" target="_blank">
-          {{ gettext('here') }}</a>.
+          {{ _('Affero GNU Public Licence v3') }}</a>.
+          {{ _('Get the source code') }} <a href="https://github.com/ttiurani/extendedmind" target="_blank">
+          {{ _('here') }}</a>.
         </p>
-        <p>{{ gettext('Development of Troika is supported by') }} 
-           <a href="http://www.verkostoanatomia.fi/" target="_blank">Verkostoanatomia</a> {{ gettext('ja') }}
+        <p>{{ _('Development of Troika is supported by') }} 
+           <a href="http://www.verkostoanatomia.fi/" target="_blank">Verkostoanatomia</a> {{ _('ja') }}
            <a href="http://www.filosofianakatemia.fi/" target="_blank">Filosofian Akatemia</a>. 
         </p>
       </section>
       <section id="contact" class="tl-anchor">
         <div class="page-header">
-          <h3>{{ gettext('Contact us') }}</h3>
+          <h3>{{ _('Contact us') }}</h3>
         </div>
-        <p><a href="mailto:info@troikalearning.org">{{ gettext('Give instant feedback about Troika') }}</a>.
+        <p><a href="mailto:info@troikalearning.org">{{ _('Give instant feedback about Troika') }}</a>.
         </p>
-        <p>{{ gettext('For general questions about Troika, send an email to') }}
+        <p>{{ _('For general questions about Troika, send an email to') }}
           <a href="mailto:info@troikalearning.org">info@troikalearning.org</a>.
         </p>
-        <p>{{ gettext('For questions about this site, send an email to') }} 
+        <p>{{ _('For questions about this site, send an email to') }} 
           <a href="mailto:webmaster@troikalearning.org">webmaster@troikalearning.org</a>.
         </p>
       </section>
