--- a/org/troikalearning/troikalearning/templates/login.html
+++ b/org/troikalearning/troikalearning/templates/login.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 {% import 'macros.html' as macros %}
 {% block back_button %}
-<a href="/">{{ gettext('Home') }}</a>
+<a href="/">{{ _('Home') }}</a>
 {% endblock %} 
-{% block subheading %} | {{ gettext('Login / Register') }}{% endblock %}
+{% block subheading %} | {{ _('Login / Register') }}{% endblock %}
 
 {% block body %}
 <div class="container">
