--- a/org/troikalearning/troikalearning/templates/troikas.html
+++ b/org/troikalearning/troikalearning/templates/troikas.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% import 'macros.html' as macros %}
 {% block back_button %}
-<a class="navbar-link" href="about">{{ gettext('About') }}</a>
+<a class="navbar-link" href="about">{{ _('About') }}</a>
 {% endblock %}
 {% block subheading %} &ndash; {% call macros.slogan() %}{% endcall %} {% endblock %}
 
@@ -9,7 +9,7 @@
 
 {% call macros.heading() %} {% endcall %}
 <div class="pagination-centered">
-  <a href="{{ url_for('create_troika') }}"><h4>{{ gettext('Create a new troika event') }}</h4></a>
+  <a href="{{ url_for('create_troika') }}"><h4>{{ _('Create a new troika event') }}</h4></a>
 </div>
 <div class="container-fluid">
   <div class="row-fluid">
@@ -19,9 +19,9 @@
           <div class="accordion-heading">
             <div class="accordion-toggle">
               <a href="#tl-active-collapse" data-toggle="collapse" data-parent="#tl-active-accordion">
-              <h3>{{ gettext('Active Troikas') }}</h3>
+              <h3>{{ _('Active Troikas') }}</h3>
               </a>
-              <h6>{{ gettext('Upcoming troikas you can join.') }}</h6> 
+              <h6>{{ _('Upcoming troikas you can join.') }}</h6> 
             </div>
           </div>
           <div id="tl-active-collapse" class="accordion-body collapse in">
@@ -36,7 +36,7 @@
                     </span>
                   </li>
                 {% else %}
-                  <li><em>{{ gettext('Unbelievable. No entries.') }}</em></li> 
+                  <li><em>{{ _('Unbelievable. No entries.') }}</em></li> 
                 {% endfor %}
               </ul>
             </div>
@@ -50,9 +50,9 @@
           <div class="accordion-heading">
             <div class="accordion-toggle">
               <a data-toggle="collapse" data-parent="#tl-pending-accordion" href="#tl-pending-collapse">
-              <h3>{{ gettext('Pending Troikas') }}</h3>
+              <h3>{{ _('Pending Troikas') }}</h3>
               </a>
-              <h6>{{ gettext('Suggested troikas not yet activated. Check if you can help!') }}</h6> 
+              <h6>{{ _('Suggested troikas not yet activated. Check if you can help!') }}</h6> 
             </div>
           </div>
           <div id="tl-pending-collapse" class="accordion-body collapse in">
@@ -69,7 +69,7 @@
                     {% endif %}
                   </li> 
                 {% else %}
-                  <li><em>{{ gettext('Unbelievable. No entries.') }}</em></li>
+                  <li><em>{{ _('Unbelievable. No entries.') }}</em></li>
                 {% endfor %}
               </ul>
             </div>
@@ -83,9 +83,9 @@
           <div class="accordion-heading">
             <div class="accordion-toggle">
               <a data-toggle="collapse" data-parent="#tl-completed-accordion" href="#tl-completed-collapse">
-                <h3>{{ gettext('Completed Troikas') }}</h3>
+                <h3>{{ _('Completed Troikas') }}</h3>
               </a>
-              <h6>{{ gettext('Succesfully held troikas.') }}</h6> 
+              <h6>{{ _('Succesfully held troikas.') }}</h6> 
             </div>
           </div>
           <div id="tl-completed-collapse" class="accordion-body collapse">
@@ -99,7 +99,7 @@
                     </span>
                   </li>
                 {% else %}
-                <li><em>{{ gettext('Unbelievable. No entries.') }}</em></li>
+                <li><em>{{ _('Unbelievable. No entries.') }}</em></li>
                 {% endfor %}
               </ul>
             </div>
