--- a/org/troikalearning/troikalearning/templates/edit_troika.html
+++ b/org/troikalearning/troikalearning/templates/edit_troika.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 {% import 'macros.html' as macros %}
 {% block back_button %}
-<a href="/">{{ gettext('Home') }}</a>
+<a href="/">{{ _('Home') }}</a>
 {% endblock %} 
-{% block subheading %} | {% if access == 'create' %}{{ gettext('Create') }}{% else %}{{ gettext('Edit') }}{% endif %}{% endblock %}
+{% block subheading %} | {% if access == 'create' %}{{ _('Create') }}{% else %}{{ _('Edit') }}{% endif %}{% endblock %}
 
 {% block body %}
 <div class="container">
@@ -13,7 +13,7 @@
       {% call macros.handle_errors(errors=troikaerrors) %} {% endcall %}
       <form id="tl-troika" action="" method="POST">
         {% if access == 'create' %}
-            {{ gettext('When you fill up this form you will become a
+            {{ _('When you fill up this form you will become a
             creator for a new pending troika. The troika will
             become active once two other participants have
             confirmed their attendance and you have agreed
